src/test/fail/basic_syntax/binary_noreturn.lly
#[
SyntaxError: Function needed to return a value, but did not.
Where: File "binary_noreturn.lly" at line 8
]#

define f() { }

if f() || f():
    print("Failed.\n")
    
